--- a/css/game.css
+++ b/css/game.css
@@ -10,7 +10,7 @@
 
 @font-face {
     font-family: 'Satoshi';
-    src: url('/Satoshi-Variable.ttf') format('truetype-variations');
+    src: url('../Satoshi-Variable.ttf') format('truetype-variations');
     font-weight: 300 900;
 }
 * {
